# googleClient

./: .gitignore  README.md  pyproject.toml
googleClient/: __init__.py  api.py  auth.py  cli.py  colors.py  constants.py  display.py  repl.py  utils.py
googleClient/commands/: __init__.py  cd.py  get.py  info.py  ls.py  mget.py  perms.py  pwd.py  rawname.py  recent.py  search.py  size.py  tree.py
